[gd_scene load_steps=6 format=3 uid="uid://cxo6ejtpl84dv"]

[ext_resource type="Script" uid="uid://cgma4m63h4aa7" path="res://Objects/Scripts/pause_menu.gd" id="1_15pn7"]
[ext_resource type="Texture2D" uid="uid://b8skplt3ha455" path="res://assets/start.png" id="2_efbdn"]
[ext_resource type="Texture2D" uid="uid://87u2mlxpafak" path="res://assets/start_pressed.png" id="3_c5wfb"]
[ext_resource type="FontFile" uid="uid://l4ovprpdyykl" path="res://assets/antiquity-print.ttf" id="4_bog3y"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1gc43"]
load_path = "res://.godot/imported/start_pressed.png-47e15bf6b546ff5d0631bc88d54560a9.ctex"

[node name="pauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15pn7")

[node name="menuCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="menuCanvas"]
offset_left = -77.0
offset_top = -40.0
offset_right = 173.0
offset_bottom = 238.0
scale = Vector2(5.2038445, 2.63269)
color = Color(0, 0, 0, 0.5294118)

[node name="MarginContainer" type="MarginContainer" parent="menuCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -33.0
offset_right = 35.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="menuCanvas/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="resume" type="TextureButton" parent="menuCanvas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 125)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_efbdn")
texture_pressed = SubResource("CompressedTexture2D_1gc43")
texture_hover = ExtResource("3_c5wfb")

[node name="RichTextLabel" type="RichTextLabel" parent="menuCanvas/MarginContainer/VBoxContainer/resume"]
custom_minimum_size = Vector2(250, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_bog3y")
theme_override_font_sizes/normal_font_size = 32
text = "Resume"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="menuCanvas/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="menu" type="TextureButton" parent="menuCanvas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 125)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("2_efbdn")
texture_hover = ExtResource("3_c5wfb")

[node name="RichTextLabel" type="RichTextLabel" parent="menuCanvas/MarginContainer/VBoxContainer/menu"]
custom_minimum_size = Vector2(250, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_bog3y")
theme_override_font_sizes/normal_font_size = 32
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="menuCanvas/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="menuCanvas/MarginContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
